tests/testdata/declaration/syntax_error/include.jinja2
{# template with syntax error on line 2 #}
{% This line raises a Syntax Error %}
